--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.33.1",
     "@codesandbox/sandpack-react": "^2.19.10",
-    "next": "15.1.3",
+    "next": "^13.5.8",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -24,6 +24,6 @@
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^4.9.5"
   }
 }
