--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,7 +11,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.33.1",
     "@codesandbox/sandpack-react": "^2.19.10",
-    "next": "^13.5.8",
+    "next": "^15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
