--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.33.1",
     "@codesandbox/sandpack-react": "^2.19.10",
+    "ioredis": "^5.4.2",
     "next": "^15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
